<resources>
  <string name="app_name" translatable="false">Stock Hawk</string>

  <!-- Translate Below -->
  <string name="action_example">Example action</string>

  <string name="action_settings">Settings</string>
  <string name="action_change_units">Change Units</string>
  <string name="symbol_search">Symbol Search</string>
  <string name="content_test">Search for a Stock Symbol</string>
  <string name="input_hint">FB</string>
  <string name="input_prefill" />
  <string name="network_toast">Uh-oh! This app requires an internet connection</string>
  <string name="add_new_stock">Add a new stock</string>
  <string name="already_saved_toast">This stock is already saved!</string>
  <string name="stock_detail_label">Stock</string>
  <string name="graph_content_description">Stock Chart</string>
  <string name="start_date">Start Date</string>
  <string name="end_date">End Date</string>
  <string name="graph_evolution">Evolution</string>
  <string name="graph_max">Max</string>
  <string name="graph_min">Min</string>
  <string name="appwidget_text">EXAMPLE</string>
  <string name="add_widget">Add widget</string>
  <string name="string_stock_invalid">This stock symbol is invalid!</string>
  <string name="no_internet_message">No interenet connection found</string>
  <string name="no_stocks_message">No Stocks Saved</string>
  <string name="detail_activity">Stock</string>
  <string name="stock_added">Stock added</string>
  <string name="default_stock_symbol" translatable="false">GOOG</string>
  <string name="default_bid_price" translatable="false">1000.00</string>
  <string name="default_percent_change" translatable="false">100%</string>

  <string name="cursor_is_valid">This should only be called when Cursor is valid</string>
  <string name="cursor_to_position">Could not move Cursor to position:</string>

  <!-- Accessibility -->
  <string name="off_white">off_white_image</string>
  <string name="clear_white">clear white image</string>
</resources>
