
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

        <TextView
            android:id="@+id/internet_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/no_internet_message"/>


        <TextView
            android:id="@+id/stock_empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/no_stocks_message"/>


    <!-- Make accessible with contentDescription -->
    <com.melnykov.fab.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_add_white_24dp"
        android:contentDescription="@string/add_new_stock"
        fab:fab_colorNormal="@color/material_blue_500"
        fab:fab_colorPressed="@color/material_blue_600"
        fab:fab_colorRipple="@color/ripple"
        fab:fab_shadow="true"
        fab:fab_type="normal"
        fab:layout_anchor="recycler_view"
        fab:layout_anchorGravity="bottom | end"
        />
</FrameLayout>
