<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="5"
        android:orientation="vertical">

        <lecho.lib.hellocharts.view.LineChartView
            android:id="@+id/linechart"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:contentDescription="@string/graph_content_description"
            android:padding="5dp">
        </lecho.lib.hellocharts.view.LineChartView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardCornerRadius="5dp"
                card_view:cardBackgroundColor="@color/material_blue_700">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:padding="5dp"
                    android:baselineAligned="false">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/start_date"
                            android:textAppearance="?android:textAppearanceSmall"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/end_date"
                            android:textAppearance="?android:textAppearanceSmall"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/graph_evolution"
                            android:textAppearance="?android:textAppearanceSmall"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/graph_max"
                            android:textAppearance="?android:textAppearanceSmall"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/graph_min"
                            android:textAppearance="?android:textAppearanceSmall"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/graph_begin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:textAppearanceSmall"/>
                        <TextView
                            android:id="@+id/graph_end"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:textAppearanceSmall"/>
                        <TextView
                            android:id="@+id/graph_evolution"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:textAppearanceSmall"/>
                        <TextView
                            android:id="@+id/graph_max"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:textAppearanceSmall"/>
                        <TextView
                            android:id="@+id/graph_min"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:textAppearanceSmall"/>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </ScrollView>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>